--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
         <h1> Fundamentos  </h1>
+
+        <img src="" />
+
+    <script src="./fetch-4.js" ></script>
+
 </body>
 </html>
