Se realizó la peticion a la api de Start Wars

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-        <h1> Fundamentos  </h1>
+        <h1> Fundamentos  de JS </h1>
 
-        <img src="" />
+        <div>
+            <div class="card" >
 
-    <script src="./fetch-4.js" ></script>
+                <img src="https://sm.ign.com/t/ign_latam/screenshot/default/vader_g4fz.1280.jpg" />
+               
+                <p  id="name"  >
+                    Nombre: 
+                </p>
+
+            </div>
+            
+
+        </div>
+
+    <script src="./fetch-7.js" ></script>
 
 </body>
 </html>
